src/ejercicios_resueltos/wordpress_k8s/manifest/05-mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mariadb
  clusterIP: None
