src/ejercicios_resueltos/wordpress_k8s/manifest/07-wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: wordpress
  type: ClusterIP
