src/ejercicios_resueltos/wordpress_k8s/manifest/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
spec:
  tls:
    - hosts:
        - mbit.local
      secretName: tls-mbit-local
  rules:
    - host: mbit.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress-service
                port:
                  number: 80
